# rim

./: Cargo.toml  LICENSE  README.md  README_en.md
.VSCodeCounter/2022-12-05_22-12-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
doc/: .$protocol.drawio.bkp  RIM.html  protocol.drawio  shutdown.sh
src/: group.rs  lib.rs  main.rs  resp.rs  route.rs  store.rs  user.rs  ws.rs
src/common/: mod.rs  resp.rs  store.rs  time.rs
src/friend/: friend_dao.rs  friend_model.rs  friend_router.rs  friend_service.rs  mod.rs
src/group/: group_dao.rs  group_model.rs  group_router.rs  group_service.rs  mod.rs
src/message/: message_dao.rs  message_model.rs  message_router.rs  message_service.rs  mod.rs
src/user/: mod.rs  user_dao.rs  user_model.rs  user_router.rs  user_service.rs
src/wss/: mod.rs  ws_service.rs
tests/: util_test.rs
