[package]
name = "rim"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3"
rocket = {version = "0.5.0-rc.2",features = ["json"]}
mysql = "22.2.0"
lazy_static = "1.4.0"
anyhow = "1.0.53"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
uuid = {version = "1.2.2",features = [ "v4"]}
thread_local = "1.1.4"