[package]
name = "rim"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.23.1", features = ["full"] }
futures = "0.3"

rocket = {version = "0.5.0-rc.2",features = ["json"]}

mysql = "22.2.0"
mysql_common = { version = "0.28.2", features = ["chrono"] }

lazy_static = "1.4.0"
anyhow = "1.0.53"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
chrono = { version = "0.4", features = ["unstable-locales"] }
uuid = {version = "1.2.2",features = [ "v4"]}
thread_local = "1.1.4"

log = "0.4.17"
env_logger = "0.10.0"